--- a/program.yml
+++ b/program.yml
@@ -39,3 +39,41 @@
   - id: 27
     start_time: 2026-03-29 11:45:00
     end_time: 2026-03-29 12:00:00
+- title: Poster
+  start_time: 2026-03-29 14:00:00
+  end_time: 2026-03-29 17:00:00
+  papers:
+  - id: 8
+    start_time: 2026-03-29 14:00:00
+    end_time: 2026-03-29 17:00:00
+  - id: 10
+    start_time: 2026-03-29 14:00:00
+    end_time: 2026-03-29 17:00:00
+  - id: 23
+    start_time: 2026-03-29 14:00:00
+    end_time: 2026-03-29 17:00:00
+  - id: 17
+    start_time: 2026-03-29 14:00:00
+    end_time: 2026-03-29 17:00:00
+  - id: 24
+    start_time: 2026-03-29 14:00:00
+    end_time: 2026-03-29 17:00:00
+  - id: 7
+    start_time: 2026-03-29 14:00:00
+    end_time: 2026-03-29 17:00:00
+  - id: 13
+    start_time: 2026-03-29 14:00:00
+    end_time: 2026-03-29 17:00:00
+  - id: 18
+    start_time: 2026-03-29 14:00:00
+    end_time: 2026-03-29 17:00:00
+  - id: 26
+    start_time: 2026-03-29 14:00:00
+    end_time: 2026-03-29 17:00:00
+  - id: 3
+    start_time: 2026-03-29 14:00:00
+    end_time: 2026-03-29 17:00:00
+  - id: 22
+    start_time: 2026-03-29 14:00:00
+    end_time: 2026-03-29 17:00:00
+  
