--- a/conference_details.yml
+++ b/conference_details.yml
@@ -1,5 +1,5 @@
-book_title: Proceedings of the 2nd Workshop Natural Language Processing for Turkic Languages (SIGTURK 2026)
-event_name: The 2nd Workshop on Natural Language Processing for Turkic Languages
+book_title: Proceedings of the Second Workshop Natural Language Processing for Turkic Languages (SIGTURK 2026)
+event_name: The Second Workshop on Natural Language Processing for Turkic Languages
 cover_subtitle: Proceedings of the Workshop
 anthology_venue_id: SIGTURK
 start_date: 2026-03-29
@@ -15,4 +15,4 @@ editors:
     last_name: Varol
 publisher: Association for Computational Linguistics
 volume_name: 1
-watermark_book_title: Proceedings of the 2nd Workshop Natural Language Processing for Turkic Languages (SIGTURK 2026)
+watermark_book_title: Proceedings of the Second Workshop Natural Language Processing for Turkic Languages (SIGTURK 2026)
