--- a/program.yml
+++ b/program.yml
@@ -3,7 +3,7 @@
   end_time: 2026-03-29 09:15:00
 - title: Session 1
   start_time: 2026-03-29 09:15:00
-  end_time: 2026-03-29 10:30:00
+  end_time: 2026-03-29 10:00:00
   papers:
   - id: 1
     start_time: 2026-03-29 09:15:00
@@ -14,18 +14,15 @@
   - id: 19
     start_time: 2026-03-29 09:45:00
     end_time: 2026-03-29 10:00:00
-  - id: 21
-    start_time: 2026-03-29 10:00:00
-    end_time: 2026-03-29 10:15:00
-  - id: 28
-    start_time: 2026-03-29 10:15:00
-    end_time: 2026-03-29 10:30:00
+- title: Invited Talk - Mirac Suzgun, Stanford University
+  start_time: 2026-03-29 10:00:00
+  end_time: 2026-03-29 10:45:00
 - title: Coffee Break
-  start_time: 2026-03-29 10:30:00
+  start_time: 2026-03-29 10:45:00
   end_time: 2026-03-29 11:00:00
 - title: Session 2
   start_time: 2026-03-29 11:00:00
-  end_time: 2026-03-29 12:00:00
+  end_time: 2026-03-29 12:30:00
   papers:
   - id: 5
     start_time: 2026-03-29 11:00:00
@@ -39,41 +36,47 @@
   - id: 27
     start_time: 2026-03-29 11:45:00
     end_time: 2026-03-29 12:00:00
+  - id: 21
+    start_time: 2026-03-29 12:00:00
+    end_time: 2026-03-29 12:15:00
+  - id: 28
+    start_time: 2026-03-29 12:15:00
+    end_time: 2026-03-29 12:30:00
 - title: Poster
   start_time: 2026-03-29 14:00:00
-  end_time: 2026-03-29 17:00:00
+  end_time: 2026-03-29 15:30:00
   papers:
   - id: 8
     start_time: 2026-03-29 14:00:00
-    end_time: 2026-03-29 17:00:00
+    end_time: 2026-03-29 15:30:00
   - id: 10
     start_time: 2026-03-29 14:00:00
-    end_time: 2026-03-29 17:00:00
+    end_time: 2026-03-29 15:30:00
   - id: 23
     start_time: 2026-03-29 14:00:00
-    end_time: 2026-03-29 17:00:00
+    end_time: 2026-03-29 15:30:00
   - id: 17
     start_time: 2026-03-29 14:00:00
-    end_time: 2026-03-29 17:00:00
+    end_time: 2026-03-29 15:30:00
   - id: 24
     start_time: 2026-03-29 14:00:00
-    end_time: 2026-03-29 17:00:00
+    end_time: 2026-03-29 15:30:00
   - id: 7
     start_time: 2026-03-29 14:00:00
-    end_time: 2026-03-29 17:00:00
+    end_time: 2026-03-29 15:30:00
   - id: 13
     start_time: 2026-03-29 14:00:00
-    end_time: 2026-03-29 17:00:00
+    end_time: 2026-03-29 15:30:00
   - id: 18
     start_time: 2026-03-29 14:00:00
-    end_time: 2026-03-29 17:00:00
+    end_time: 2026-03-29 15:30:00
   - id: 26
     start_time: 2026-03-29 14:00:00
-    end_time: 2026-03-29 17:00:00
+    end_time: 2026-03-29 15:30:00
   - id: 3
     start_time: 2026-03-29 14:00:00
-    end_time: 2026-03-29 17:00:00
+    end_time: 2026-03-29 15:30:00
   - id: 22
     start_time: 2026-03-29 14:00:00
-    end_time: 2026-03-29 17:00:00
+    end_time: 2026-03-29 15:30:00
   
